# navi-mcp

./: README.md  server.py
navi-mcp/: CHANGES.md  LICENSE  README.md  pyproject.toml
navi-mcp/src/navi_mcp/resources/skills/navi/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-acr/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-action/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-core/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-enrich/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-explore/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-export/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-mcp/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-scan/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-troubleshooting/: SKILL.md
navi-mcp/src/navi_mcp/resources/skills/navi-was/: SKILL.md
