[project]
name = "navi-mcp"
version = "1.0.0"
description = "MCP server wrapping the navi CLI for Tenable Vulnerability Management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "packetchaos" },
]
keywords = ["mcp", "tenable", "navi", "vulnerability-management", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/packetchaos/navi-mcp"
Repository = "https://github.com/packetchaos/navi-mcp"
Issues = "https://github.com/packetchaos/navi-mcp/issues"

[project.scripts]
navi-mcp = "navi_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/navi_mcp"]

# Include all files under resources/ (including the bundled navi-claude-skills
# directory at resources/skills/) as package data. The server's SKILL_DIR
# defaults to <pkg>/resources/skills, so this makes `pip install` self-contained
# with no separate clone required.
[tool.hatch.build.targets.wheel.force-include]
"src/navi_mcp/resources" = "navi_mcp/resources"

# Also ship resources in sdist.
[tool.hatch.build.targets.sdist]
include = [
    "src/navi_mcp/**",
    "README.md",
    "LICENSE",
    "CHANGES.md",
]
